<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textExit"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/cancel_order"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDescription"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:padding="@dimen/_10sdp"
                    android:text="NO"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDisconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDescription"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_toStartOf="@+id/textNo"
                    android:fontFamily="@font/sf_pro_medium"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textColor="@color/yellow"
                    android:textSize="15sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>